--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,5 @@ scripts
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+
+ignition/deployments
