--- a/.gitignore
+++ b/.gitignore
@@ -149,6 +149,6 @@ scripts
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
 
-ignition/deployments
+#ignition/deployments
 
-# ignition/modules
+ignition/modules
