--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,7 @@ ignition/deployments/chain-31337
 #ignition/deployments
 
 ignition/modules
+
+ignition/deployments/mainnet-BLC-002
+
+ignition/deployments/mainnet-BLC-003
