--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "scripts": {
     "test": "npx hardhat test",
     "start-node": "npx hardhat node",
+    "main:js": "node scripts/JslibCodes.js",
+    "ld": "ts-node scripts/leaderboard.ts",
+    "up:gm": "ts-node scripts/Upgrade.ts",
     "main:test": "ts-node scripts/TestBuyingLife.ts",
     "deploy-BLC-localhost": "npx hardhat ignition deploy ./ignition/modules/BuyLifeContract.ts --network localhost --deployment-id BLC-001",
     "deploy-BLC-mainnet": "npx hardhat ignition deploy ./ignition/modules/BuyLifeContract.ts --network linea_mainnet --verify --deployment-id mainnet-BLC-003",
+    "deploy-GM-mainnet": "npx hardhat ignition deploy ./ignition/modules/GameManager.ts --network linea_mainnet --verify --deployment-id mainnet-GM-006",
+    "deploy-GM-V2-mainnet": "npx hardhat ignition deploy ./ignition/modules/GameManager.ts --network linea_mainnet --verify --deployment-id mainnet-GM-010",
+    "deploy-RF": "npx hardhat ignition deploy ./ignition/modules/ReferralSystem.ts --network linea_mainnet --deployment-id mainnet-RF-101",
     "gen-typechain": "npx hardhat typechain",
     "compile": "npx hardhat compile",
     "remix": "npx remixd -s /Users/macbookpro/projects/SolwalkContracts"
@@ -25,7 +31,7 @@
     "@types/mocha": "9.1.0",
     "chai": "^4.2.0",
     "dotenv": "^16.4.5",
-    "ethers": "^6.13.4",
+    "ethers": "6",
     "hardhat": "^2.22.16",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.1",
